--- a/redessociais.html
+++ b/redessociais.html
@@ -18,7 +18,11 @@
 <main>
 
     <section id="telefone">
-        <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+        <iframe src="home.html" name="tela" id="tela" frameborder="0">
+            Seu navegador não e compativel.
+
+
+        </iframe>
 
 
 
@@ -29,6 +33,13 @@
 
     
     <section id="redes-sociais">
+
+        <a href="" target="tela"><img src="pacote-d013/imagens/logo-home.jpg" alt=""></a><br>
+        <a href="" target="tela"><img src="pacote-d013/imagens/logo-youtube.jpg" alt=""></a><br>
+        <a href="" target="tela"><img src="pacote-d013/imagens/logo-github.jpg" alt=""></a><br>
+        <a href="" target="tela"><img src="pacote-d013/imagens/logo-instagram.jpg" alt=""></a><br>
+        <a href="" target="tela"><img src="pacote-d013/imagens/logo-facebook.jpg" alt=""></a><br>
+        <a href="" target="tela"><img src="pacote-d013/imagens/logo-twitter.jpg" alt=""></a><br>
 
 
 
