--- a/facebook.html
+++ b/facebook.html
@@ -5,36 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/social.css">
 </head>
-
-<style>
-
-    *{
-        margin: 0;
-        padding: 0;
-    }
-
-    body{
-        width: 100vw;
-        height: 100vh;
-        background: black url(pacote-d013/imagens/myhome.jpeg) no-repeat top center;
-        background-size: cover;
-    }
-
-</style>
-
-
-
-
-
 <body>
 
-
-
-
-
-
-
+    <img src="pacote-d013/imagens/telaface.jpeg" alt="">
+    <a href="https://www.facebook.com/fredericomesquitta/" target="_blank">Acesse
     
 </body>
 </html>
